--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,24 @@
-.App {
+.login-background {
+  background-image: url('./images/background.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100%; 
+  overflow: auto;
+
+}
+
+#app {
+  height: 100%;
+  overflow: auto;
+}
+
+#white-background{
+  background: white;
+  
+  margin-top: 10%;
+  border-radius: 10px;
   text-align: center;
-}
+  padding-bottom: 5px  
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
