--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,15 @@ h3 {
 .inner-map-wrapper {
   display: inline-block
 }
+
+.new-map-button {
+  display: inline-block;
+  margin: 5px;
+  min-width: 160px;
+  max-width: 160px;
+  
+}
+
+#new-map-button-div {
+  text-align: center;
+}
