--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@ background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3
   max-height: 100%; 
   overflow: auto;
   text-align: center;
+  background-attachment: fixed;
 }
 
 
@@ -99,6 +100,7 @@ background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3
   max-height: 100%; 
   overflow: auto;
   text-align: center;
+  background-attachment: fixed;
 
 }
 
